--- a/public/login.html
+++ b/public/login.html
@@ -91,6 +91,7 @@
     <div class="toast-container" id="toastContainer"></div>
 
     <script src="js/auth.js"></script>
+    <script src="js/api.js"></script>
     <script>
         document.getElementById('loginForm').addEventListener('submit', async (e) => {
             e.preventDefault();
