--- a/public/login.html
+++ b/public/login.html
@@ -100,7 +100,7 @@
             const password = document.getElementById('password').value;
             
             try {
-                const response = await fetch('https://jjf-phonebook.up.railway.app/api/auth/login', {
+                const response = await fetch('https://jjfphonebook.up.railway.app/api/auth/login', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
