--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -29,6 +29,7 @@
   </head>
   <body>
     <div class="dashboard-container">
+      <div class="sidebar-overlay" id="sidebarOverlay"></div>
       <!-- Sidebar -->
       <aside class="sidebar">
         <div class="sidebar-header">
