--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -130,7 +130,7 @@
                 <input
                   type="text"
                   id="searchInput"
-                  placeholder="Search contacts by name, phone, or email..."
+                  placeholder="Search contacts by Name..."
                   autocomplete="off"
                   inputmode="search"
                   enterkeyhint="search"
