--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -113,9 +113,10 @@
       <main class="main-content">
         <!-- Header -->
         <header class="main-header">
-            <div class="mobile-app-logo">
-              <img src="images/pb.png" alt="JJF Phonebook">
-            </div>
+        <div class="mobile-brand">
+          <i class="fas fa-address-book"></i>
+            <span>JJF Phonebook</span>
+              </div>
           <div class="header-left">
             <div class="breadcrumb">
               <span class="breadcrumb-item">Dashboard</span>
